DZIALA API AAAAA